<resources>
    <string name="app_name">pharmacy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prenom</string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_sec_social">N° Securite Social</string>
    <string name="hint_phone">N° Telephone</string>
    <string name="text_register">Inscrire</string>

    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>


    <string name="text_pharmacies">Pharmacies</string>

    <string name="text_adress">Adress :</string>
    <string name="text_from">From : </string>
    <string name="text_to">To : </string>

    <string name="text_launch_order">Order drugs</string>

</resources>
