<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="Creer Votre compte ! "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.066" android:textSize="18sp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049" android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nom" android:id="@+id/textInputNom" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="360dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/textInputPrenomLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.134">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_prenom" android:id="@+id/textInputPrenom" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049" android:id="@+id/textInputLayoutAdresse"
            app:layout_constraintTop_toBottomOf="@+id/textInputPrenomLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_adresse" android:id="@+id/textInputAdresse" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAdresse" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.064" android:id="@+id/textInputLayoutNumeroSocial">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sec_social" android:id="@+id/textInputNumeroSocial"
                android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049" android:id="@+id/textInputLayoutPhone"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNumeroSocial">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone" android:id="@+id/textInputPhone" android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>


    <Button
            android:text="@string/text_register"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="132dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone"/>
    <TextView
            android:text="if you have an account "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:textSize="12sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="120dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="login here"
            android:textColor="#03A9F4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goToLogin" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"/>
</android.support.constraint.ConstraintLayout>