<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="79dp"
            android:id="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/textView4">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone" android:inputType="phone" android:id="@+id/inputTextPhone"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="75dp"
            android:id="@+id/textInputLayout3"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
    >

        <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/hint_password" android:id="@+id/inputTextPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/text_login"
            android:layout_width="193dp"
            android:layout_height="50dp"
            android:id="@+id/loginButton"
            android:layout_marginBottom="168dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.474" android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="if you don't have an account "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>
    <TextView
            android:text="sign up here"
            android:textColor="#03A9F4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goToSignUp" android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="96dp"
    />
</android.support.constraint.ConstraintLayout>